--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="io.instabee.codetest"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:name="io.instabee.codetest.MainApplication"
