--- a/gradle.properties
+++ b/gradle.properties
@@ -4,16 +4,22 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx1024m -XX:MaxPermSize=256m
-org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-#
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
-#Mon Aug 03 16:02:30 CEST 2020
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+
+android.debug.obsoleteApi=true
+android.enableD8=true
+
 android.enableJetifier=true
 android.useAndroidX=true
+
+# Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+# Enables namespacing of each library's R class so that its R class includes only the
+# resources declared in the library itself and none from the library's dependencies,
+# thereby reducing the size of the R class for that library
+android.nonTransitiveRClass=true
+
+kapt.incremental.apt=true
 android.defaults.buildfeatures.buildconfig=true
-android.nonTransitiveRClass=false
 android.nonFinalResIds=false
